--- a/questionpaper/templates/base.html
+++ b/questionpaper/templates/base.html
@@ -253,7 +253,7 @@ font-family: 'Jameel Noori Nastaleeq' ,'Open Sans', sans-serif;
           </a>
         </li>
         <li id="ethicspapers" class="nav-item has-treeview">
-          <a href="{% url 'questionpaper:addquestion' %}" class="nav-link">
+          <a href="{% url 'questionpaper:addmcq' %}" class="nav-link">
             <i class="nav-icon fa fa-files-o"></i>
             <p>
               Add MCQs
