--- a/questionpaper/templates/paper.html
+++ b/questionpaper/templates/paper.html
@@ -259,7 +259,7 @@
 
 			<div class="col-lg-12 col-sm-12">                         
 
-			  <label for="group_title_en" class="col-sm-12 control-label" >Question No:  1</label>
+			  <label for="group_title_en" class="col-sm-12 control-label" >Question No:1 Write answers of any Five questions.</label>
 
 			  <div style="font-weight:bold"></div>
 
@@ -279,16 +279,21 @@
 					  
 					  <tr>
 
-						<td colspan="2" style="font-weight:bold">
+						<td style="font-weight:bold">
 
 
 <ol>
 	{% for i in qbs %}                               
 <li type="a">
-	{{i.question_eng}}</li>
+	{{i.question_eng}}<br><span style="direction:rtl; text-align: right;" class="urdufont-right"> {{i.question_urd}}</span></li>
 	{% endfor %} 
 </ol>
-							</td>
+							</td><td style="direction:rtl; text-align: right;" class="urdufont-right"><ol>
+								{% for i in qbs %}                               
+							<li type="a">
+								{{i.question_urd}}</li>
+								{% endfor %} 
+							</ol></td>
 
 					  </tr>
 
@@ -336,7 +341,7 @@
 							<ol>
 								{% for i in qbl %}                               
 							<li type="a">
-								{{i.question_eng}}</li>
+								{{i.question_eng}}<br><span style="direction:rtl; text-align: right;" class="urdufont-right"> {{i.question_urd}}</span></li>
 								{% endfor %} 
 							</ol>
 
