--- a/questionpaper/templates/paper.html
+++ b/questionpaper/templates/paper.html
@@ -1,35 +1,11 @@
 
-
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-<body class="hold-transition sidebar-mini">
-
-<!-- Main Wrapper Start -->
-<div class="wrapper">
-
-  <!-- Navbar -->
-
-  
-  
-
-  
-  <!-- /.navbar -->
 
 
-  <!-- Sideabr -->
 
-  
-  
-<!-- Main Sidebar Container -->
-
-
-<script>
-  $("#view_mcqs_double").addClass('menu-open');
-  $("#view_mcqs_double > a").addClass('active');
- $("#generated_papers").addClass('menu-open');$("#generated_papers > a").addClass('active'); </script>
-  
-  <!-- / .Sideabr -->
-  <!-- Content Wrapper. Contains page content -->
+<div class="content">
 
 <style>
 
@@ -103,18 +79,6 @@
 
 			<div class="card-body" style="overflow-y: hidden">
 
-				<!-- For Messages -->
-
-				
-    <!--print error messages-->
-    
-    <!--print custom error message-->
-    
-    <!--print custom success message-->
-    
-				<!---- start here is item view filmzy --->
-
-				<!--Pilotheader-->
 
 				
 					<div class="container" style="padding:5px">
@@ -376,4 +340,4 @@
 
 	
 </div>
-{% endblock %}
+{% endblock content %}
