--- a/questionpaper/templates/addmcq.html
+++ b/questionpaper/templates/addmcq.html
@@ -4,25 +4,39 @@
 
 {% block content %}
 <div class="content">
+    <h1 style="text-align:center; font:bold;">Add Multiple Choice Questions</h1>
 <form action="addmcq" method="post">
     {% csrf_token %}
-
-    {{mcq_form|crispy}}
-    {{o_form|crispy}}
-    {{t_form|crispy}}
-    <p>Fields marked <b>*</b> are required</p>
+<table class="table">
+    {{mcq_form.as_table}}
+    {{o_form.as_table}}
+    {{t_form.as_table}}
+    <script>
+        $(function () {
+            var availableTags = [
+                {% for i in m %}
+            "{{i.mcq}}",
+            {% endfor %}
+    ];
+        $("#tags").autocomplete({
+            source: availableTags
+        });
+    } );
+    </script>
+</table>
+    
     <button type="submit" class="btn btn-info">Add MCQ</button>
 </form>
-<p>
+<p style="color:red;">
 {% for msg in messages %}
 {{msg}}
 {% endfor %}
 </p>
 <div class="table">
-    <table>
+    <table class="table" style="width:100%;">
         <tr><th>MCQ</th><th>Option A</th><th>Option B</th><th>Option C</th><th>Option D</th><th>True Option</th><th>Action</th></tr>
         {% for q in mcqs %}
-        <tr><td>{{q.trueoption.options.mcq}}</td><td>{{q.trueoption.op_a}}</td><td>{{q.trueoption.op_b}}</td><td>{{q.trueoption.op_c}}</td><td>{{q.trueoption.op_d}}</td><td>{{q.trueoption}}</td><td><button type="submit" class="btn btn-info">Approve</td></tr>
+        <tr><td>{{q.trueoption.options.mcq}}</td><td>{{q.trueoption.op_a}}</td><td>{{q.trueoption.op_b}}</td><td>{{q.trueoption.op_c}}</td><td>{{q.trueoption.op_d}}</td><td>{{q.trueoption}}</td><td><form class="d-inline" action="{% url 'questionpaper:approvemcq' q.id %}" method="POST">{% csrf_token %}<input type="submit" value="Approve" class="btn btn-primary"> </form></td></tr>
         {% endfor %}
     </table>
 </div>
