--- a/questionpaper/templates/home.html
+++ b/questionpaper/templates/home.html
@@ -66,12 +66,29 @@
                     <table class="table table-borderless bg-success" style="width:50%">
                         <tr><td>Class</td><td><select type="text" name="grade" required>
                             <option value="">--select--</option>
+                            <option value="10">10</option>
                             <option value="9">9</option>
+                            <option value="8">8</option>
+                            <option value="7">7</option>
+                            <option value="6">6</option>
+                            <option value="5">5</option>
                         </select></td></tr>
                         <tr><td>Subject</td><td><select type="text" name="subject" required>
                             <option value="">--select--</option>
                             <option value="physics">Physics</option>
+                            <option value="chemistry">Chemistry</option>
+                            <option value="biology">Biology</option>
+                            <option value="mathematics">Mathematics</option>
+                            <option value="urdu">Urdu</option>
+                            <option value="english">English</option>
+                            <option value="islamiyat">Islamiyat</option>
+                            <option value="pakstudy">Pak Study</option>
                         </select></td></tr>
+                        <tr><td>Paper Type</td><td><select type="text" name="paper_type" required>
+                          <option value="">--select--</option>
+                          <option value="subjective">Subjective Paper</option>
+                          <option value="objective">Objective Paper</option>
+                      </select></td></tr>
                         
                     </table>
             
