long questions added

--- a/questionpaper/templates/home.html
+++ b/questionpaper/templates/home.html
@@ -59,7 +59,7 @@
               <!-- small box -->
               <div class="small-box bg-success" style="text-align:center;">
                 <h3 style="text-align:center;">Generate Paper</h3>
-                <div class="inner" style="margin-left:30%;">
+                <div class="inner">
                   
                   <form  action="{% url 'questionpaper:paper' %}" method="post" target="_blank">
                     {% csrf_token %}
