--- a/questionpaper/templates/paper.html
+++ b/questionpaper/templates/paper.html
@@ -298,7 +298,7 @@
 							<ol>
 								{% for i in qbl %}                               
 							<li type="a">
-								{{i.question_eng}}<br><span style="direction:rtl; text-align: right;" class="urdufont-right"> {{i.question_urd}}</span></li>
+								<p style="margin-bottom: 0em; display:inline;">{{i.question_eng}}</p></li> <p style="direction:rtl; text-align: right;" class="urdufont-right"> {{i.question_urd}}</p>
 								{% endfor %} 
 							</ol>
 
