--- a/questionpaper/templates/home.html
+++ b/questionpaper/templates/home.html
@@ -24,7 +24,7 @@
           <div class="col-12">
           <div class="info-box">  
               <div class="info-box-content" style="font-size: 14px; font-weight: normal;">				  
-             <h1>Welcome to Question Bank</h1><h2> Online  Question Paper Preparation Free Service</h2>Following Subjects' Question Bank available <br> <ul><li>Physics</li><li>Chemistry</li><li>Biology</li></ul>           </div>
+             <h1>Welcome to Question Bank</h1><h2> Online  Question Paper Preparation Free Service</h2>Following Subjects' Question Bank available <br> <ul><li>9<sup>th</sup>&nbsp;Physics</li><li>9<sup>th</sup>&nbsp;Chemistry</li><li>9<sup>th</sup>&nbsp;Biology</li><li>9<sup>th</sup>&nbsp;Computer Science</li><li>9<sup>th</sup>&nbsp;Pakistan Studies</li></ul>           </div>
 			  <!--<div class="row"><h3><a href="https://drive.google.com/drive/folders/1REeHrElNX_a9XxF84vLTtyFULwLBJEax" target="_blank">Click here to Download Grade 1 & 2 and Grade 3 to 8 all Islamiat Nazra Papers</a></h3></div>-->
               <!-- /.info-box-content -->
             </div>           
@@ -73,6 +73,8 @@
                             <option value="physics">Physics</option>
                             <option value="chemistry">Chemistry</option>
                             <option value="biology">Biology</option>
+                            <option value="computer">Computer</option>
+                            <option value="pakstudies">Pakistan Studies</option>
                         </select></td></tr>
                         <tr><td>Paper Type</td><td><select type="text" name="paper_type" required>
                           <option value="">--select--</option>
